<resources>
        
    <string name="app_name">Smart Pi SDK</string>       
    <string name="configuring_message">Configuring network ...</string>       
    <string name="text_test_code_note">Press the test, if the matching target (TV or air conditioner) is powered on or beeps, it means that the data matching is successful. Otherwise, please change the next one</string>       
    <string name="text_previous_group">Previous group</string>       
    <string name="text_next_group">Next group</string>       
    <string name="text_test">Test</string>       
    <string name="text_request_fail">The request failed!</string>       
    <string name="text_ac">AC</string>       
    <string name="text_tv">TV</string>       
    <string name="text_stb">STB</string>       
    <string name="text_iptv">IPTV</string>       
    <string name="text_finish">Done</string>       
    <string name="text_edit">Edit</string>       
    <string name="text_learn_again">re-recording code</string>       
    <string name="text_create_code_again">Recreate the code</string>       
    <string name="text_edit_key">Edit button</string>       
    <string name="text_learn">record physical button</string>       
    <string name="text_create_code">Create encoding button</string>       
    <string name="text_delete">Delete</string>       
    <string name="text_custom">Custom</string>       
    <string name="text_please_input_key_word">Please enter keywords</string>       
    <string name="text_no_result">No results</string>       
    <string name="text_save">Save</string>       
    <string name="text_timer_setting">Timer Setting</string>       
    <string name="text_timer_name_label">name (can not exceed 24 bytes)</string>       
    <string name="text_timer">Timer</string>       
    <string name="text_timer_start_time_label">start time (in minutes)</string>       
    <string name="text_timer_repeat_time_label">Repeat (refer to documentation parameter description)</string>       
    <string name="text_timer_action">Execute task</string>       
    <string name="text_add_sub_dev">Add sub-device</string>       
    <string name="text_please_select_device_type">Please select the device to add</string>       
    <string name="text_device_list">device list</string>       
    <string name="text_homepage">home page</string>       
    <string name="text_wifi_name">wifi name</string>       
    <string name="text_wifi_psw">wifi password</string>       
    <string name="text_go_config">Start to configure the network</string>       
    <string name="text_config_notes">1. If you cannot get Wi-Fi information, please turn on the location permission of the application and the GPS positioning switch of your phone. \ n 2. The device does not support 5G band Wi-Fi temporarily.</string>       
    <string name="text_local_entry_code">Infrared code read and send</string>       
    <string name="text_fireware_update">Firmware update</string>       
    <string name="text_timer_list">Timer List</string>       
    <string name="text_sub_dev">sub device</string>       
    <string name="text_timezone_setting">Set the time zone</string>       
    <string name="text_ip_address">IP address</string>       
    <string name="text_mac_address">MAC address</string>       
    <string name="text_lastest_version">Latest firmware</string>       
    <string name="text_fireware_version">Firmware version</string>       
    <string name="text_online_status">Online status</string>       
    <string name="text_dev_detail">Device details</string>       
    <string name="text_switch">switch</string>       
    <string name="text_sub_dev_detail">Sub Device Details</string>       
    <string name="text_mode">Mode</string>       
    <string name="text_wind_dir">Wind direction</string>       
    <string name="text_wind_speed">Wind speed</string>       
    <string name="text_temp_plus">Temp +</string>       
    <string name="text_temp_minus">Temp-</string>       
    <string name="text_cancel">Cancel</string>       
    <string name="text_click_to_send_code">Click to send</string>       
    <string name="text_repeat">Repeat:</string>       
    <string name="text_local_online">Local online</string>       
    <string name="text_control">Direct control</string>       
    <string name="text_study_again">re-recording code</string>       
    <string name="text_study_code_notes">Please point the infrared remote control at the host and press the remote control button within 20 seconds</string>       
    <string name="text_control_successed">Control success!</string>       
    <string name="text_operate_successed">Operation succeeded!</string>       
    <string name="text_operate_failed">Operation failed!</string>       
    <string name="text_power">Power</string>       
    <string name="text_on">On</string>       
    <string name="text_off">Off</string>       
    <string name="text_temp">Temp</string>       
    <string name="text_wind_dir_radom">sweeping wind</string>       
    <string name="text_low">Low</string>       
    <string name="text_mid">Medium</string>       
    <string name="text_high">High</string>       
    <string name="text_auto">Auto</string>       
    <string name="text_heat">Heat</string>       
    <string name="text_cool_wind">Cool Wind</string>       
    <string name="text_dry">Dehumidification</string>       
    <string name="text_cold">Cooling</string>       
    <string name="text_keys_num"> keys</string>       
    <string name="text_please_add_key_first">Please add the key first</string>       
    <string name="text_sure_delete_this_action">Are you sure you want to delete this task?</string>       
    <string name="text_confirm">OK</string>       
    <string name="text_promt">Prompt</string>       
    <string name="text_max_num_tip">Can add up to 5</string>       
    <string name="text_delete_timer_tip">Are you sure you want to delete this timer?</string>       
    <string name="text_please_input_name">Please enter a name</string>       
    <string name="text_out_of_limit">The word count is too long</string>       
    <string name="text_data_full">Data is full!</string>       
    <string name="text_save_successed">Successful save</string>       
    <string name="text_save_failed">Save failed!</string>       
    <string name="text_get_data_failed">Failed to get data!</string>       
    <string name="text_config_successed">The distribution network is successful!</string>       
    <string name="text_config_failed">Failed to configure the network!</string>       
    <string name="text_remote_online">Remote online!</string>       
    <string name="text_offline">offline</string>       
    <string name="text_fireware_update_un_availeable">is the latest firmware, no need to update!</string>
    <string name="text_fireware_update_note">The device upgrade takes about 1 minute, please do not power off</string>       
    <string name="text_every_day">Every day</string>       
    <string name="text_sun">Sunday</string>       
    <string name="text_satur">Saturday</string>       
    <string name="text_fri">Friday</string>       
    <string name="text_thurs">Thursday</string>       
    <string name="text_weds">Wednesday</string>       
    <string name="text_tues">Tuesday</string>       
    <string name="text_mon">Monday</string>       
    <string name="text_once_time">Once</string>       
    <string name="text_weekend">Weekend</string>       
    <string name="text_work_day">working Day</string>
    <string name="text_change_timing">Edit Timer</string>
    <string name="text_minute_unit">Min</string>
    <string name="dialog_input_name_error">The input cannot be empty </string>
    <string name="text_number_limit">The number of input words is too long</string>
    <string name="text_disinfection_records">Disinfection Record</string>
    <string name="text_nono_history">No record yet</string>
    <string name="text_disinfection_paused">Stop Disinfection </string>
    <string name="text_detected_someone">Someone detected</string>
    <string name="text_disinfection_ended">End disinfection, duration:%d minutes</string>
    <string name="text_disinfection_opened"> Start Disinfection</string>
    <string name="text_disinfection_canceled">Cancel Disinfection </string>
    <string name="text_disinfection_resumed">Resume Disinfection </string>
    <string name="text_device_child_lock">Child lock is opened,prohibited to start </string>
    <string name="text_device_auto">Device Control</string>
    <string name="text_timing_disinfection">Timed Start</string>
    <string name="text_disinfection">Disinfection </string>
    <string name="text_action_time">Start time</string>
    <string name="text_disinfection_duration">Disinfection Duration</string>
    <string name="text_repeat_time">Repeat</string>
    <string name="text_undisinfect">尚未消过毒</string>
    <string name="text_latest_disinfection_time">上次消毒：%1$s</string>
    <string name="text_stop_disinfection">停止消毒</string>
    <string name="text_disinfecting">正在消毒</string>
    <string name="text_start_disinfection">开始消毒</string>
    <string name="text_pause_disinfection">消毒暂停</string>
    <string name="text_disinfection_for_15_mins">消毒15分钟</string>
    <string name="text_disinfection_for_30_mins">消毒30分钟</string>
    <string name="text_disinfection_for_60_mins">消毒60分钟</string>
    <string name="text_delete_successed">删除成功！</string>
    <string name="text_delete_failed">删除失败！</string>
    <string name="text_control_failed">控制失败！</string>
    <string name="text_child_lock">儿童锁</string>
</resources>
