<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.MainActivity">

    <com.example.helloworld.view.CommonToolbar
        android:elevation="4dp" tools:targetApi="lollipop"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:viewbar_left_isvisible="true"
        app:viewbar_right_Text="@string/text_device_list"
        app:viewbar_right_TextColor="@android:color/holo_blue_light"
        app:viewbar_title="@string/text_homepage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <EditText
            android:id="@+id/ssidEdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:maxLines="1"
            android:gravity="center"
            android:hint="@string/text_wifi_name"/>

        <EditText
            android:id="@+id/pswEdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:maxLines="1"
            android:gravity="center"
            android:hint="@string/text_wifi_psw"
            android:text=""/>

    <Button
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        android:text="@string/text_go_config"
        android:onClick="buttonWasPressed" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_config_notes"/>

    </LinearLayout>

</LinearLayout>