<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.example.helloworld.view.CommonToolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:viewbar_left_isvisible="true"
        app:viewbar_title="@string/text_dev_detail"
        tools:targetApi="lollipop" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:context=".ui.MainDeviceDetailActivity">

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ctrlBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/text_start_disinfection" />
            <TextView
                android:id="@+id/disinfectionLampStatusTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_online_status"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/stateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    tools:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/firewareCurVerLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_fireware_version"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/firewareCurVerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    tools:text="" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/firewareLatestVerLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_lastest_version"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/firewareLatestVerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    tools:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/macLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_mac_address"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/macTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    tools:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/ipLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_ip_address"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/ipTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    tools:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/timezoneBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@drawable/listview_item_selector"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_timezone_setting"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/timezoneTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30dp"
                    android:textSize="16sp"
                    tools:text="GM+ 8:00" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/timerListBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@drawable/listview_item_selector"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_timer_setting"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/recordBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@drawable/listview_item_selector"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_disinfection_records"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/childLockBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@drawable/listview_item_selector"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_child_lock"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/childLockSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:enabled="false"
                    android:thumb="@drawable/ios_thumb_shape"
                    android:track="@drawable/ios_back_drawable"
                    android:layout_marginRight="10dp"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/firewareUpgradeBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="1px"
                android:background="@drawable/listview_item_selector"
                android:clickable="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/text_fireware_update"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right" />
            </RelativeLayout>

            <Button
                android:id="@+id/delBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:text="@string/text_delete" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>